[package]
name = "mithril-client"
version = "0.5.13"
description = "Mithril client library"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[test]]
name = "snapshot_list_get_show_download_verify"
path = "tests/snapshot_list_get_show_download_verify.rs"
required-features = ["fs"]

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.73"
hex = "0.4.3"
sha2 = "0.10.8"
typetag = "0.2.13"
fixed = "1.24.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
nom = "7.1.3"
bech32 = "0.9.1"
walkdir = "2.4.0"
digest = "0.10.7"
chrono = { version = "0.4.31", features = ["serde"] }
flate2 = { version = "1.0.27", optional = true }
flume = { version = "0.11.0", optional = true }
futures = "0.3.28"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
semver = "1.0.19"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
slog = "2.7.0"
strum = { version = "0.25.0", features = ["derive"] }
tar = { version = "0.4.40", optional = true }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync"] }
uuid = { version = "1.5.0", features = ["v4"] }
zstd = { version = "0.13.0", optional = true }
kes-summed-ed25519 = { version = "0.2.1", features = ["serde_enabled", "sk_clone_enabled"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
blake2 = "0.10.6"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11.22", features = ["json", "stream"] }

[target.'cfg(target_family = "unix")'.dependencies]
# only unix supports the default rug backend
mithril-stm = { path = "../mithril-stm", version = "0.3" }

[dev-dependencies]
httpmock = "0.6.8"
indicatif = { version = "0.17.7", features = ["tokio"] }
mithril-common = { path = "../mithril-common", version = "0.2", features = ["random", "test_tools"] }
mockall = "0.12.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-term = "2.9.0"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
warp = "0.3"

[features]
# Include nothing by default
default = ["fs"]

# Full feature set
full = ["fs"]

# Enable file system releated functionnality, right now that mean ony snapshot download
fs = ["flate2", "flume", "tar", "tokio/rt", "zstd"]
portable = ["mithril-common/portable"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
glob = "0.3.1"
semver = "1.0.19"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
